<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BaseMVVM</string>
    <string name="text_empty" />
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="not_connected_internet">Not connected internet</string>
    <string name="profile_name_relative" translatable="false">%1$s(%2$s)</string>
    <string name="error_title">Error</string>
    <string name="news_list_error_message">Unable to get data, please check your network connection then try again later.</string>
    <string name="news_detail_message">Unable to get data, please check your network connection then try again later.</string>
    <string name="hot_line">0(123) 80 10 80</string>
    <string name="consultation">Consultation</string>
    <string name="consultation_content">Response on 3 minutes</string>
    <string name="booking">Booking</string>
    <string name="booking_content">24/7</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="find_doctor_content">400+ doctors</string>
    <string name="ask_question">Ask Question</string>
    <string name="ask_question_content">See 05 experts</string>
    <string name="health_mall">Look up drugs</string>
    <string name="health_mall_content">15.000+ drugs</string>
    <string name="service_header">Vinmec services</string>
    <string name="news_header">News and health articles</string>
    <string name="diseases_header">Diseases &amp; Conditions</string>
    <string name="see_more">See more&#8230;</string>
    <string name="share">Share</string>
    <string name="view">%1$s Views</string>
    <string name="related_news">Related</string>
    <string name="date_time_format">MMM dd, yyyy</string>
    <string name="month_format" translatable="false">MMM</string>
    <string name="month_year_format" translatable="false">M/yyyy</string>
    <string name="day_format" translatable="false">d</string>
    <string name="day_time_line_format" translatable="false">dd</string>
    <string name="month_time_line_format" translatable="false">MM</string>
    <string name="time_format" translatable="false">hh:mm a</string>
    <string name="time_format_24h" translatable="false">HH:mm</string>
    <string name="date_notificatonformat" translatable="false">dd/MM/yyyy</string>
    <string name="date_time_clinical_fmt" translatable="false">dd/MM/yyyy</string>
    <string name="both_date_and_time_fmt" translatable="false">HH:mm, dd/MM/yyyy</string>
    <string name="popup_title">Information</string>
    <string name="developing_feature">This feature under development</string>
    <string name="content_locale">en</string>
    <string name="content_source">/en/</string>
    <string name="welcome">Welcome to MyVinmec.</string>
    <string name="welcome_content">Welcome to MyVinmec description.</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="facebook_signin">Facebook Signin</string>
    <string name="google_signin">Google Signin</string>
    <string name="do_not_have_account_yet">I don\'t have account, Signup now</string>
    <string name="signin_title">Signin to continue</string>
    <string name="signup_title">Signup with</string>
    <string name="signup_information">Information</string>
    <string name="other_information">Other information</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_identify">Identify/Passport</string>
    <string name="hint_job">Job</string>
    <string name="hint_nation">Nation</string>
    <string name="hint_race">Race</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_company_name">Company name</string>
    <string name="hint_company_tax">Tax code</string>
    <string name="hint_company_address">Address receipt</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="signup_email_title">Signup with email</string>
    <string name="gender_title">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_verify">Verify phone number</string>
    <string name="content_verify">Verify code has been sent to phone number %1$s via SMS</string>
    <string name="countdown_verify">Resend confirmation code %1$d:%2$d</string>
    <string name="clinical_case">Clinical record</string>
    <string name="clinical_content">You have %1$d clinical record</string>
    <string name="my_profile">My Profile</string>
    <string name="health_onformation">Health information</string>
    <string name="allergery">Allergery Information</string>
    <string name="bio_information">Bio Information</string>
    <string name="treatment_history">Treatment history</string>
    <string name="booking_schedule">Booking schedule</string>
    <string name="daily_routine">Daily routines</string>
    <string name="activities">Activity logs</string>
    <string name="preferences">Preferences</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="finish">Finish</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_repeat_new_password">Repeat new password</string>
    <string name="heart_beat">Heart beat</string>
    <string name="general">General</string>
    <string name="weight">Weight</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="health_check_report">Health check report</string>
    <string name="in_use_service">In use service</string>
    <string name="prescription">Prescription</string>
    <string name="receipt">Receipt</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="code">Code</string>
    <string name="clinic">Clinic</string>
    <string name="guide">Guide</string>
    <string name="vinfa">VinFa</string>
    <string name="qa">QA</string>
    <string name="contact">Hotline</string>
    <string name="header_title">We care with compassion, professionalism and wisdom</string>

    <string name="today">Today</string>
    <!--    <string name="tomorrow">Tomorrow</string>-->
    <string name="after_tomorrow">After tomorrow</string>
    <string name="day_remain_fmt">%1$s days remain</string>
    <string name="day_ago">%1$s day(s) ago</string>
    <string name="month_ago">%1$s month(s) ago </string>
    <string name="year_ago">%1$s year(s) ago </string>

    <string name="day_left_future">%1$s day(s) left</string>
    <string name="month_left">%1$s month(s) left </string>
    <string name="year_left">%1$s year(s) left </string>
    <!--    <string name="yeah_past_fmt">Last %1$s years </string>-->
    <string name="select_language">Language</string>
    <string name="vietnamese">Tiếng việt</string>
    <string name="english">English</string>
    <string name="overdue">Overdue</string>

    <string name="time_duration_s">%1$ds</string>
    <string name="time_duration_m">%1$dm</string>
    <string name="time_duration_h">%1$dh</string>
    <string name="time_duration_d">%1$dd</string>
    <string name="time_duration_month">%1$dM</string>
    <string name="time_duration_y">%1$dy</string>

    <string name="discount_duration_fmt">From %1$s - %2$s</string>
    <string name="discount_duration_start_fmt">From %1$s</string>

    <string name="popup_create_child_title">Let us get to know each other</string>
    <string name="popup_createchild_content">Create profiles to help Mom receive information regarding age and physical condition of the baby from 0 to 3 years old</string>
    <string name="close">Close</string>

    <string name="mess_not_exist_patient_code">Patient code does not exist in Vinmec Healthcare System</string>
    <string name="yes">Yes</string>
    <string name="information">information</string>
    <string name="logout_confirm">Logout confirm</string>
    <string name="no">No</string>
    <string name="author">Author</string>
    <string name="splash_image">splashImage</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>