<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_56sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingEnd="@dimen/_56sdp"
    android:paddingBottom="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_white_corners_25dp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_dismiss"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_oval_grey"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/ic_close_white"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/btn_dismiss"
            android:text="@string/popup_create_child_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/msg_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="8dp"
            android:text="@string/popup_createchild_content"
            android:textColor="@color/actionbar_title_color"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:id="@+id/box_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_below="@+id/msg_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="8dp"
            android:gravity="center|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="@dimen/_124sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/close"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@+id/box_btn" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>