<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_56sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingEnd="@dimen/_56sdp"
    android:paddingBottom="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_white_corners_25dp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_oval_grey"
            android:padding="8dp"
            android:src="@drawable/ic_close_white"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            tools:text="@string/logout" />

        <TextView
            android:id="@+id/msg_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="0dp"
            android:textColor="@color/actionbar_title_color"
            android:textSize="@dimen/_11ssp"
            tools:text="@string/logout_confirm" />

        <LinearLayout
            android:id="@+id/box_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_below="@+id/msg_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="0.7"
                android:background="@null"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/actionbar_title_color" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_below="@+id/box_btn" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>